--- a/client/src/scss/partials/variables.scss
+++ b/client/src/scss/partials/variables.scss
@@ -5,3 +5,9 @@ $top: 1.25rem;
 $line-height: 1.25rem;
 $mobile-font-size: 0.83rem;
 $desktop-font-size: 1rem;
+$body-font: ('Montserrat', sans-serif);
+$body-font-light: 300;
+$body-font-reg: 400;
+$body-font-heavy: 500;
+$header-font: ('Oswald', sans-serif);
+$header-weight: 700; 
