--- a/client/src/index.css
+++ b/client/src/index.css
@@ -150,27 +150,30 @@ table {
   display: flex;
   flex-flow: column nowrap;
   padding-bottom: 1.5rem;
-  font-size: 0.83rem; }
+  font-size: 0.83rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  line-height: 1.25rem; }
 
 .work {
-  flex: 0 0 auto;
   width: 80%;
+  flex: 0 0 auto;
   align-self: center;
   margin-top: 1.25rem;
   padding-bottom: 0.75rem;
-  text-align: left;
   background-color: white;
   box-shadow: 0 4px 0.5rem #ccc;
+  text-align: left;
   display: flex;
   flex-flow: column wrap; }
   @media (min-width: 750px) {
     .work {
       max-width: 800px; } }
   .work .workImg {
+    height: 200px;
+    width: 100%;
     flex: 0 0 auto;
     order: 0;
-    width: 100%;
-    height: 200px;
     object-fit: cover;
     object-position: 50% top; }
     @media (min-width: 750px) {
@@ -185,41 +188,40 @@ table {
   .work .company {
     flex: 0 0 auto;
     order: 1;
+    margin: 0.5rem 0 0.5rem 1rem;
     font-size: 1.125rem;
     font-family: "Oswald", sans-serif;
-    font-weight: 700;
-    margin: 0.5rem 0 0.5rem 1rem; }
+    font-weight: 700; }
     @media screen and (min-width: 750px) {
       .work .company {
         font-size: 1.5rem; } }
   .work .position {
     flex: 0 0 auto;
     order: 2;
-    font-size: 1rem;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
     margin-bottom: 0.5rem;
-    margin-left: 1rem; }
+    margin-left: 1rem;
+    font-size: 1rem;
+    font-weight: 500; }
     .work .position include respond-to('min-desktop') {
       font-size: 1.125rem; }
   .work .description {
     flex: 0 0 auto;
     order: 3;
     margin-bottom: 0.625rem;
-    line-height: 1.25rem;
     padding: 0 1rem;
     font-family: "Montserrat", sans-serif;
-    font-weight: 300; }
+    font-weight: 300;
+    line-height: 1.25rem; }
   .work .workContributions {
     flex: 0 0 auto;
     order: 4;
+    margin: 0;
+    padding: 0;
     font-family: "Montserrat", sans-serif;
     font-weight: 300;
-    margin: 0;
-    padding: 0; }
+    line-height: 1.25rem; }
     .work .workContributions .contributions {
       font-size: 1rem;
-      font-family: "Montserrat", sans-serif;
       font-weight: 500;
       margin: 0 0 0.125rem 1rem; }
       @media (min-width: 750px) {
@@ -227,73 +229,77 @@ table {
           font-size: 1.125rem; } }
     .work .workContributions li {
       width: 90%;
+      margin: 0 0 0.25rem 1rem;
       text-align: left;
-      line-height: 1.25rem;
       list-style-position: outside;
-      list-style-type: disc;
-      margin: 0 0 0.25rem 1rem; }
+      list-style-type: disc; }
     .work .workContributions ul {
       margin: 0 0 0 1.5rem; }
   .work .links {
     order: 5;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 300;
     margin: 0.625rem 0 0.5rem 0;
     padding: 0 1rem;
-    white-space: nowrap;
-    line-height: 1.25rem; }
+    font-family: "Montserrat", sans-serif;
+    font-weight: 300;
+    line-height: 1.25rem;
+    white-space: nowrap; }
     .work .links p {
       font-weight: 500;
       overflow: hidden; }
     .work .links a {
+      padding-left: 0.625rem;
+      font-family: "Montserrat", sans-serif;
       font-weight: 300;
-      padding-left: .625rem; }
+      line-height: 1.25rem; }
     .work .links a:hover {
       text-decoration: underline;
       text-decoration-color: black; }
 
 #Resume {
+  width: 100%;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   padding: 1.5rem 0;
-  text-align: left;
-  font-size: 0.83rem;
   font-family: "Montserrat", sans-serif;
-  width: 100%; }
+  font-weight: 400;
+  line-height: 1.25rem;
+  font-size: 0.83rem;
+  text-align: left; }
   @media (min-width: 922px) {
     #Resume {
-      width: 100%;
-      height: auto; } }
+      height: auto;
+      width: 100%; } }
 
 #resume-container {
-  flex: 0 0 auto;
-  align-self: center;
   width: 80%;
   display: flex;
-  flex-flow: column nowrap; }
+  flex-flow: column nowrap;
+  flex: 0 0 auto;
+  align-self: center; }
   #resume-container a:hover {
     text-decoration: underline;
     text-decoration-color: gray; }
   @media (min-width: 750px) {
     #resume-container {
+      display: flex;
       flex-flow: column wrap;
       height: 1215px;
       width: 85%; }
       #resume-container #contact-container,
       #resume-container #skills-container,
       #resume-container #right-container {
-        flex: 1;
-        width: 33%; }
+        width: 33%;
+        flex: 1; }
       #resume-container #contact-container {
         flex: 0 0 auto;
         order: 1;
-        margin: 0;
         align-self: flex-start;
+        margin: 0;
         border-right: 1px solid black; }
         #resume-container #contact-container #contact-header {
-          text-align: left;
-          margin-left: 0.75rem; }
+          margin-left: 0.75rem;
+          text-align: left; }
       #resume-container #skills-container {
         order: 2;
         align-self: flex-start;
@@ -303,9 +309,9 @@ table {
           margin-left: 1rem;
           padding-right: 0.75rem; }
       #resume-container #right-container {
+        width: 63%;
         flex: 0 0 100%;
         order: 3;
-        width: 63%;
         align-self: flex-end; }
         #resume-container #right-container h2:nth-child(1) {
           margin: 0 0 0.25rem 0; } }
@@ -335,29 +341,31 @@ table {
       height: 980px; } }
   @media (min-width: 1225px) {
     #resume-container {
-      width: 950px;
-      height: 970px; } }
+      height: 970px;
+      width: 950px; } }
 
 #contact-container {
+  width: 16.375rem;
   flex: 0 0 auto;
   align-self: center;
-  margin: 0.25rem 0 0 0;
-  width: 16.375rem; }
+  margin: 0.25rem 0 0 0; }
   #contact-container #contact-header {
-    text-align: center;
-    margin: 0 0 0.25rem 0; }
+    margin: 0 0 0.25rem 0;
+    text-align: center; }
   #contact-container .contact {
     display: block;
-    text-align: left;
     margin: 0 0 0 0.75rem;
-    line-height: 1.5rem;
-    font-weight: 300; }
+    text-align: left;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 300;
+    line-height: 1.25rem;
+    line-height: 1.5rem; }
     #contact-container .contact img {
-      width: 1rem;
       height: 1rem;
-      padding-right: 0.375rem;
+      width: 1rem;
       position: relative;
-      top: 2px; }
+      top: 2px;
+      padding-right: 0.375rem; }
     #contact-container .contact #email-icon {
       top: 3px; }
 
@@ -366,11 +374,11 @@ table {
 #education,
 #technical-skills,
 #contact-header {
+  margin: 1.5rem 0 0.25rem 0;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 1.25rem;
   text-transform: uppercase;
-  margin: 1.5rem 0 0.25rem 0;
   letter-spacing: 0.075rem; }
 
 #hele,
@@ -400,22 +408,24 @@ table {
 #ny-aug-2012-may-2013,
 #devleague,
 #new-york-university-gallatin-school-of-individualized-study-2011-2013 {
-  font-size: 0.83rem;
   margin: 0 0 0.125rem 0;
+  font-size: 0.83rem;
   line-height: 1.25rem; }
 
 .responsibilities {
   width: 90%; }
   .responsibilities li {
+    margin-left: 1rem;
+    font-family: "Montserrat", sans-serif;
     font-weight: 300;
+    line-height: 1.25rem;
     list-style-position: outside;
-    list-style-type: disc;
-    margin-left: 1rem; }
+    list-style-type: disc; }
 
 #resp-skills {
+  margin-bottom: 0.25rem;
   text-align: left;
-  line-height: 1.25rem;
-  margin-bottom: 0.25rem; }
+  line-height: 1.25rem; }
 
 #bachelor-of-arts-in-interdisciplinary-studies,
 #resident-assistant {
@@ -428,16 +438,15 @@ table {
       margin-top: -0.25rem; } }
 
 #skills-container .skills h4 {
-  font-family: "Montserrat", sans-serif;
+  padding-right: 0.5rem;
   font-weight: 500;
   margin-top: 1rem;
-  padding-right: 0.5rem;
-  text-transform: uppercase;
-  letter-spacing: 0.0625rem; }
+  letter-spacing: 0.0625rem;
+  text-transform: uppercase; }
 
 .lineBreak {
-  width: 75%;
   height: 0.5rem;
+  width: 75%;
   border-top: none;
   border-right: none;
   border-bottom: 1px solid #cccccc;
@@ -450,7 +459,10 @@ table {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  width: 100%; }
+  width: 100%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  line-height: 1.25rem; }
 
 #About-Container {
   width: 80%;
@@ -460,6 +472,7 @@ table {
   flex-flow: column wrap; }
   @media (min-width: 866px) {
     #About-Container {
+      display: flex;
       flex-flow: row nowrap;
       width: 85%; } }
   @media (min-width: 1225px) {
@@ -495,6 +508,7 @@ table {
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  line-height: 1.25rem;
   background-color: #e8e7e5; }
   body a,
   body a:visited {
@@ -508,60 +522,59 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 0;
-  background-color: #c2dacd;
-  background-image: linear-gradient(#c2dacd, #b6ccbb);
   box-shadow: 0 1px 1px #ccc;
   border-radius: 2px;
-  font-family: "Montserrat", sans-serif;
+  background-color: #c2dacd;
+  background-image: linear-gradient(#c2dacd, #b6ccbb);
   font-weight: 500; }
   #Nav #nicoleSandry {
     flex: 0 0 auto;
     order: 1;
-    font-size: 1.375rem;
-    color: black;
     margin-left: 2rem;
-    letter-spacing: 0.5rem;
-    text-transform: uppercase;
+    color: black;
     font-family: "Oswald", sans-serif;
-    font-weight: 700; }
+    font-weight: 700;
+    font-size: 1.375rem;
+    letter-spacing: 0.5rem;
+    text-transform: uppercase; }
   #Nav .active {
     text-decoration: none; }
     @media (min-width: 750px) {
       #Nav .active {
-        font-weight: 600;
         text-decoration: underline;
         text-decoration-color: white;
-        -web-kit-text-decoration-color: white; } }
+        -web-kit-text-decoration-color: white;
+        font-weight: 600; } }
   #Nav #desktop-nav {
+    display: none;
     flex: 0 0 auto;
-    order: 2;
-    display: none; }
+    order: 2; }
     @media (min-width: 750px) {
       #Nav #desktop-nav {
         display: inline;
         align-self: flex-end; } }
   #Nav .NavLink {
-    color: black;
-    padding-right: 2rem; }
+    padding-right: 2rem;
+    color: black; }
 
 #mobile-nav {
-  flex: 0 0 auto;
-  order: 3;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
+  flex: 0 0 auto;
+  order: 3;
   margin: 0;
-  background-color: white;
-  box-shadow: 0 1px 1px #ccc;
-  border-radius: 2px;
   position: absolute;
   top: 4rem;
-  z-index: 1; }
+  z-index: 1;
+  border-radius: 2px;
+  box-shadow: 0 1px 1px #ccc;
+  background-color: white; }
   #mobile-nav .NavLinkMobile {
     flex: 0 0 auto;
+    padding: 0.5rem 0;
     color: black;
-    text-align: center;
-    padding: 0.5rem 0; }
+    text-align: center; }
   #mobile-nav .mobileActive {
     background-color: black;
     color: white;
