--- a/client/src/scss/partials/resume.scss
+++ b/client/src/scss/partials/resume.scss
@@ -1,34 +1,31 @@
 #Resume {
-	display: flex;
-	flex-flow: row wrap;
+	width: 100%;
+	@include row-wrap;
 	justify-content: center;
 	padding: $bottom 0;
-	text-align: left;
+	@include montserrat-reg;
 	font-size: $mobile-font-size;
-	font-family: "Montserrat", sans-serif;
-	width: 100%;
+	text-align: left;
 
 	@include respond-to('resume-large') {
-		width: 100%;
 		height: auto;
+		width: 100%;
 	}
 }
 
 #resume-container {
+	width: $mobile-div-width;
+	@include col-nowrap;
 	flex: 0 0 auto;
 	align-self: center;
-	width: $mobile-div-width;
-
-	display: flex;
-	flex-flow: column nowrap;
-
+	
 	a:hover {
 		text-decoration: underline;
 		text-decoration-color: rgb(128, 128, 128);
 	}
 
 	@include respond-to('min-desktop') {
-		flex-flow: column wrap;
+		@include col-wrap;
 		// must set height to stack elements
 		height: 1215px;
 		width: $desktop-div-width;
@@ -37,25 +34,24 @@
 		#contact-container,
 		#skills-container,
 		#right-container {
-			flex: 1;
 			width: 33%;
+			flex: 1;
 		}
 
 		#contact-container {
 			flex: 0 0 auto;
 			order: 1;
-			margin: 0;
 			align-self: flex-start;
+			margin: 0;
 			border-right: 1px solid black;
 
 			#contact-header {
-				text-align: left;
 				margin-left: 0.75rem;
+				text-align: left;
 			}
 		}
 
 		#skills-container {
-			//background-color: lime;
 			order: 2;
 			align-self: flex-start;
 			border-right: 1px solid black;
@@ -68,10 +64,9 @@
 		}
 
 		#right-container {
-			//background-color: orange;
+			width: 63%;
 			flex: 0 0 100%;
 			order: 3;
-			width: 63%;
 			align-self: flex-end;
 
 			h2:nth-child(1) {
@@ -114,37 +109,36 @@
 
 	// set max width
 	@include respond-to('large') {
-		width: 950px;
 		height: 970px;
+		width: 950px;
 	}
 }
 
 #contact-container {
+	width: 16.375rem;
 	flex: 0 0 auto;
 	align-self: center;
 	margin: 0.25rem 0 0 0;
-	width: 16.375rem;
-	//font-size: $desktop-font-size;
 
 	#contact-header {
-		text-align: center;
 		margin: 0 0 0.25rem 0;
+		text-align: center;
 	}
 
 	.contact {
 		display: block;
-		text-align: left;
 		margin: 0 0 0 0.75rem;
+		text-align: left;
+		@include montserrat-light;
 		line-height: $line-height + 0.25rem;
-		font-weight: 300;
 
 		// contact icons
 		img {
-			width: 1rem;
 			height: 1rem;
-			padding-right: 0.375rem;
+			width: 1rem;
 			position: relative;
 			top: 2px;
+			padding-right: 0.375rem;
 		}
 
 		// adjust email icon to align with text
@@ -160,11 +154,10 @@
 #education,
 #technical-skills,
 #contact-header {
-	font-family: "Oswald", sans-serif;
-	font-weight: 700;
+	margin: 1.5rem 0 0.25rem 0;
+	@include oswald-type;
 	font-size: $desktop-font-size + 0.25rem;
 	text-transform: uppercase;
-	margin: 1.5rem 0 0.25rem 0;
 	letter-spacing: 0.075rem;
 }
 
@@ -190,7 +183,7 @@
 #web-skills,
 #business-development {
 	font-size: $desktop-font-size;
-	font-weight: 500;
+	font-weight: $body-font-heavy;
 	line-height: line-height;
 }
 
@@ -200,8 +193,8 @@
 #ny-aug-2012-may-2013,
 #devleague,
 #new-york-university-gallatin-school-of-individualized-study-2011-2013 {
-	font-size: $mobile-font-size;
 	margin: 0 0 0.125rem 0;
+	font-size: $mobile-font-size;
 	line-height: $line-height;
 }
 
@@ -211,17 +204,17 @@
 	width: 90%;
 
 	li {
-		font-weight: 300;
+		margin-left: 1rem;
+		@include montserrat-light;
 		list-style-position: outside;
 		list-style-type: disc;
-		margin-left: 1rem;
 	}
 }
 
 #resp-skills {
+	margin-bottom: 0.25rem;
 	text-align: left;
 	line-height: $line-height;
-	margin-bottom: 0.25rem;
 }
 
 #bachelor-of-arts-in-interdisciplinary-studies,
@@ -243,19 +236,18 @@
 #skills-container {
 	.skills {
 		h4 {
-			font-family: "Montserrat", sans-serif;
-			font-weight: 500;
-			margin-top: $desktop-font-size;
 			padding-right: 0.5rem;
-			text-transform: uppercase;
+			font-weight: $body-font-heavy;
+			margin-top: $desktop-font-size;
 			letter-spacing: 0.0625rem;
+			text-transform: uppercase;
 		}
 	}
 }
 
 .lineBreak {
-	width: 75%;
 	height: 0.5rem;
+	width: 75%;
 	border-top: none;
 	border-right: none;
 	border-bottom: 1px solid #cccccc;
