--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -21,6 +21,7 @@ body {
   @include row-nowrap;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: $bottom * 1rem;
   padding: 1rem 0;
   box-shadow: 0 1px 1px #ccc;
   border-radius: 2px;
@@ -117,7 +118,7 @@ body {
 #footer {
   @include row-nowrap;
   justify-content: space-between;
-  margin: 0 2rem 1rem 2rem;
+  margin: 1.5rem 2rem;
 
   @include respond-to("min-desktop") {
     justify-content: center;
