--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -37,13 +37,12 @@ body {
     @include oswald-type;
     font-size: 1.375rem;
     letter-spacing: 0.5rem;
-    text-transform: uppercase;
   }
 
   .active {
     text-decoration: none;
 
-    @include respond-to("min-desktop") {
+    @include respond-to("medium") {
       text-decoration: underline;
       text-decoration-color: rgb(255, 255, 255);
       -web-kit-text-decoration-color: rgb(255, 255, 255);
@@ -55,7 +54,7 @@ body {
     display: none;
     flex: 0 0 auto;
     order: 2;
-    @include respond-to("min-desktop") {
+    @include respond-to("medium") {
       display: inline;
       align-self: flex-end;
     }
@@ -90,13 +89,13 @@ body {
   }
 
   .mobileActive {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-weight: 600;
   }
 
   // hide when viewing on desktop layout
-  @include respond-to("min-desktop") {
+  @include respond-to("medium") {
     display: none;
   }
 }
@@ -110,7 +109,7 @@ body {
     cursor: pointer;
   }
 
-  @include respond-to("min-desktop") {
+  @include respond-to("medium") {
     display: none;
   }
 }
@@ -120,7 +119,7 @@ body {
   justify-content: space-between;
   margin: 1.5rem 2rem;
 
-  @include respond-to("min-desktop") {
+  @include respond-to("medium") {
     justify-content: center;
     a {
       margin: 0 1rem;
