--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -2,7 +2,7 @@
 @import "./partials/reset";
 @import "./partials/_clearfix";
 @import "./partials/variables";
-@import "./partials/work";
+@import "./partials/work2";
 @import "./partials/resume";
 @import "./partials/about";
 
